<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/pspd_iv_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:src="@drawable/back_arrow">

        </ImageView>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

        </View>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="8"
            android:src="@drawable/ps_title">

        </ImageView>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:scaleType="fitCenter">

        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.6"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray" />

                <LinearLayout
                    android:id="@+id/ff_ll_thumbler"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="center"
                        android:text="@string/ps_txt_wnyi"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_title" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:background="@drawable/ps_title_line_gray" />

                <LinearLayout
                    android:id="@+id/pst_ll_round"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="8"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/font_textview"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="@dimen/font_textview"
                        android:text="@string/ca_fn"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/font_textview1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="left|center_vertical"
                        android:hint="@string/ps_edt_efn"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_title" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/font_textview"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="@dimen/font_textview"
                        android:text="@string/ca_ln"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/font_textview1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="left|center_vertical"
                        android:hint="@string/ps_edt_eln"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_title" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/font_textview"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="left|center_vertical"
                        android:paddingLeft="@dimen/font_textview"
                        android:text="@string/si_email"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="@dimen/font_textview1" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="left|center_vertical"
                        android:hint="@string/ps_edt_tye"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/font_title" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@android:color/darker_gray" />

                </LinearLayout>

                <TextView
                    android:id="@+id/ps_txt_getprice"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.2"
                    android:text="@string/submit"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_title"
                    android:fontFamily="sans-serif-condensed"
                    android:textStyle="bold"
                    android:background="@drawable/ps_red_button">

                </TextView>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
