<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:id="@+id/ffq_iv_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scaleType="fitCenter"
            android:src="@drawable/back_arrow">

        </ImageView>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </View>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="10"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/ff_txt_title"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_title">

        </TextView>

        <TextView
            android:id="@+id/ffq_iv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="7dp"
            android:gravity="right|center_vertical"
            android:text="@string/cancel"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/font_textview1">

        </TextView>


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/font_textview"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left|bottom"
                    android:text="@string/cr_txt_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_textview1" />

                <EditText
                    android:id="@+id/ffq_edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_outline"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/font_textview1"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/font_textview"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|bottom"
                    android:text="@string/cr_txt_email"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_textview1" />

                <EditText
                    android:id="@+id/ffq_edt_email"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_outline"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/font_textview1"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/font_textview"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="left|bottom"
                    android:text="@string/cr_txt_phone"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_textview1" />

                <EditText
                    android:id="@+id/ffq_edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_outline"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/font_textview1"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/font_textview"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|bottom"
                    android:text="@string/ff_txt_address"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_textview1" />

                <EditText
                    android:id="@+id/ffq_edt_address"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_outline"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/font_textview1"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/font_textview"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|bottom"
                    android:text="@string/ff_txt_quantity"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/font_textview1" />

                <EditText
                    android:id="@+id/ffq_edt_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/edittext_outline"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:textSize="@dimen/font_textview1"
                    android:textStyle="bold" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/ffq_chk_hcsr"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ff_txt_hacsr"
                android:textSize="@dimen/font_textview1" />
        </LinearLayout>

        <TextView
            android:id="@+id/ffq_txt_quote"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/fitfactory_get_quote">

        </TextView>

    </LinearLayout>


</LinearLayout>
