<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fp_iv_back"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/font_textview"
            android:src="@drawable/back_arrow"
            android:scaleType="fitCenter">

        </ImageView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="12"
            android:layout_margin="2dp"
            android:text="@string/si_fp1"
            android:gravity="center"
            android:textColor="@android:color/holo_red_dark"
            android:fontFamily="sans-serif-condensed"
            android:textSize="@dimen/font_title">

        </TextView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </TextView>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"></View>

    <LinearLayout
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/font_textview"
            android:orientation="vertical">

            <LinearLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_textview"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left|bottom"
                    android:textSize="@dimen/font_textview1"
                    android:textColor="@android:color/black"
                    android:text="@string/si_eye"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/si_email"
                    android:background="@drawable/edittext_outline"
                    android:textSize="@dimen/font_textview1"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:layout_height="0dp"/>
            </LinearLayout>
            <LinearLayout
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/font_textview"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_red_light"
                    android:textSize="@dimen/font_textview1"
                    android:gravity="right"
                    android:text="@string/si_smmp"/>
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
